<resources>
    <string name="app_name">Zombie Buster!</string>

    <!--Actividad MainActivity-->
    <string name="btnLogin">LOGIN</string>
    <string name="btnRegistro">REGISTRARSE</string>

    <!--Actividad Registro-->
    <string name="correoEt">Correo Electronico</string>
    <string name="passEt">Contraseña</string>
    <string name="nombreEt">Nombre</string>
    <string name="fechatxt">Fecha</string>
    <string name="edadEt">Edad</string>
    <string name="paisEt">Pais</string>
    <string name="registrar">REGISTRAR</string>

    <!--Actividad Login-->
    <string name="correoLogin">Correo Electronico</string>
    <string name="passLogin">Contraseña</string>
    <string name="botonLogin">Ingresar</string>

    <!--Actividad Menu-->
    <string name="miperfiltxt">Mi Perfil</string>
    <string name="mipuntuaciontxt">Mi Puntuacion</string>
    <string name="zombies"> -- </string>
    <string name="uid"> -- </string>
    <string name="correo"> -- </string>
    <string name="nombre"> -- </string>
    <string name="edad"> -- </string>
    <string name="pais"> -- </string>
    <string name="fecha"> -- </string>

    <string name="menutxt">Menu</string>

    <string name="jugarbtn">Jugar</string>
    <string name="editarbtn">Editar</string>
    <string name="cambiarPassbtn">Cambiar Contraseña</string>
    <string name="puntuacionesbtn">Puntuaciones</string>
    <string name="acercadebtn">Acerca de</string>
    <string name="cerrarSesionbtn">Cerrar Sesion</string>

    <!--Escenario-->
    <string name="tvContador"> 0 </string>
    <string name="tvNombre"> ---- </string>
    <string name="tvTiempo"> 0S </string>

    <!--Pantalla-->
    <string name="anchoTv"> -- </string>
    <string name="altoTv"> -- </string>

    <!--GameOver-->
    <string name="seAcaboTXT">¡Se acabo el tiempo!</string>
    <string name="hasMatadoTXT">Has matado</string>
    <string name="numeroTXT"> -- </string>
    <string name="jugarDeNuevo">JUGAR DE NUEVO</string>
    <string name="irMenu">MENU</string>
    <string name="puntuacion">VER PUNTUACION</string>

    <!--Datos Del Jugador En La Vista-->
    <string name="NombreJugador">Nombre</string>
    <string name="CorreoJugador">Correo</string>
    <string name="PuntajeJugador">Puntuacion</string>
    <string name="EdadJugador">Edad</string>
    <string name="PaisJugador">Pais</string>

    <!--DETALLE DEL JUGADOR-->
    <string name="INFORMACIONDETALLE">INFORMACION DEL JUGADOR</string>
    <string name="NombreDetalle">Nombre</string>
    <string name="CorreoDetalle">Correo</string>
    <string name="PuntajeDetalle">Puntuacion</string>
    <string name="EdadDetalle">Edad</string>
    <string name="PaisDetalle">Pais</string>

    <!--EDICION DE CONTRASEÑA-->
    <string name="ActualPass">Actual Contraseña</string>
    <string name="NuevoPass">Nueva Contraseña</string>
    <string name="CambiarPass">Cambiar Contraseña</string>

    <!--Acerca DE-->
    <string name="DesarroladorPOTXT">Desarrollado Por:</string>
    <string name="DevTXT">Rafael Valverde Cros</string>
    <string name="OK">OK</string>

</resources>