<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".Menu">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">

        <!--TXT-->
        <TextView
            android:id="@+id/mipuntuaciontxt"
            android:text="@string/mipuntuaciontxt"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--ZOMBIES-->
        <TextView
            android:id="@+id/zombies"
            android:text="@string/zombies"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--IMAGEN-->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imagen"
            android:src="@drawable/zombie"
            android:layout_width="150dp"
            android:layout_height="150dp"/>

        <!--UID-->
        <TextView
            android:id="@+id/uid"
            android:text="@string/uid"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--CORREO-->
        <TextView
            android:id="@+id/correo"
            android:text="@string/correo"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--NOMBRE DE USUARIO-->
        <TextView
            android:id="@+id/nombre"
            android:text="@string/nombre"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--TXT-->
        <TextView
            android:id="@+id/menutxt"
            android:text="@string/menutxt"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/jugarbtn"
            android:text="@string/jugarbtn"
            android:background="@drawable/boton_personalizado"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/puntuacionesbtn"
            android:text="@string/puntuacionesbtn"
            android:background="@drawable/boton_personalizado"
            android:textColor="#ffffff"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/acercadebtn"
            android:text="@string/acercadebtn"
            android:background="@drawable/boton_personalizado"
            android:textColor="#ffffff"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/cerrarSesionbtn"
            android:text="@string/cerrarSesionbtn"
            android:background="@drawable/boton_personalizado"
            android:textColor="#ffffff"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>