<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".Registro">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">


        <!--Correo Electronico-->
        <EditText
            android:id="@+id/correoEt"
            android:hint="@string/correoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

        <!--Contraseña-->
        <EditText
            android:id="@+id/passEt"
            android:hint="@string/passEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:importantForAutofill="no"/>

        <!--Nombre del Usuario-->
        <EditText
            android:id="@+id/nombreEt"
            android:hint="@string/nombreEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:importantForAutofill="no"/>

        <!--Fecha Actual-->
        <TextView
            android:id="@+id/fechatxt"
            android:text="@string/fechatxt"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--Registrar Jugador-->
        <Button
            android:id="@+id/registrar"
            android:text="@string/registrar"
            android:layout_marginTop="10dp"
            android:background="#086A87"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>