<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".DetalleJugador">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <!--FOTO DE PERFIL-->
        <ImageView
            android:id="@+id/ImagenDetalle"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="150dp"/>

        <!--Informacion-->
        <TextView
            android:id="@+id/INFORMACIONDETALLE"
            android:text="@string/INFORMACIONDETALLE"
            android:textColor="#088A4B"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--NOMBRE-->
        <TextView
            android:id="@+id/NombreDetalle"
            android:text="@string/NombreDetalle"
            android:textColor="#0489B1"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--PUNTAJE-->
        <TextView
            android:id="@+id/PuntajeDetalle"
            android:text="@string/PuntajeDetalle"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="#FF8000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--CORREO-->
        <TextView
            android:id="@+id/CorreoDetalle"
            android:text="@string/CorreoDetalle"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <!--EDAD-->
        <TextView
            android:id="@+id/EdadDetalle"
            android:text="@string/EdadDetalle"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--PAIS-->
        <TextView
            android:id="@+id/PaisDetalle"
            android:text="@string/PaisDetalle"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>