<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="400dp"
        android:layout_height="320dp"
        android:background="#086A87"
        android:orientation="vertical">


        <TextView
            android:id="@+id/DesarroladorPOTXT"
            android:text="@string/DesarroladorPOTXT"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/desarrollador"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/DevTXT"
            android:text="@string/DevTXT"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/OK"
            android:text="@string/OK"
            android:background="#FE2E64"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>